--- a/search.html
+++ b/search.html
@@ -27,12 +27,12 @@
       </thead>
       <tbody id="result"></tbody>
     </table>
-
+    <script>"configuration.js"</script>
     <script>
       let ducks = [];
 
       async function getAll() {
-        let host = "http://localhost:8080";
+        let host = getHost();
         return fetch(host + "/ducks")
           .then((response) => response.json())
           .catch((error) => {
